--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+beautifulsoup4==4.11.1
 black==22.10.0
 fastapi==0.88.0
 fastapi-utils==0.2.1
+httpx==0.23.1
+pytest==7.2.0
+requests==2.28.1
 requests-html==0.10.0
 uvicorn==0.20.0
